--- a/public/resume-animation/index.html
+++ b/public/resume-animation/index.html
@@ -132,7 +132,13 @@
                     data-w-id="c770c51e-fa5a-d846-8815-ce4ce17d2ecf" class="d-86-block"></div>
             </div>
             <div class="d-86-button-text">Resume</div>
-        </a></div>
+          </a>
+          <!-- Hover Me text and arrow overlay -->
+          <div style="position: absolute; left:-80px; flex-direction: column; align-items:flex-end; pointer-events: none; z-index: 10;">
+            <span style="font-family: 'Caveat', 'Comic Sans MS', cursive; font-size: 2rem; color: #3b82f6; font-style: italic;position: absolute; bottom: -50px; font-weight: 500; letter-spacing: 1px;">Hover Me</span>
+            <img src="/arr2.png" alt="Arrow" style="width:120px;filter:drop-shadow(0 2px 8px #000a);position: absolute; bottom: -100px;" />
+          </div>
+        </div>
     </div>
     <script src="js/jquery.js" type="text/javascript"></script>
     <script src="js/webflow.schunk.4a394eb5af8156f2.js" type="text/javascript"></script>
