--- a/public/resume-animation/index.html
+++ b/public/resume-animation/index.html
@@ -134,9 +134,9 @@
             <div class="d-86-button-text">Resume</div>
           </a>
           <!-- Hover Me text and arrow overlay -->
-          <div style="position: absolute; left:-80px; flex-direction: column; align-items:flex-end; pointer-events: none; z-index: 10;">
-            <span style="font-family: 'Caveat', 'Comic Sans MS', cursive; font-size: 2rem; color: #3b82f6; font-style: italic;position: absolute; bottom: -50px; font-weight: 500; letter-spacing: 1px;">Hover Me</span>
-            <img src="/arr2.png" alt="Arrow" style="width:120px;filter:drop-shadow(0 2px 8px #000a);position: absolute; bottom: -100px;" />
+          <div style="width: 500px;position: absolute; left:-80px; flex-direction: column; align-items:flex-end; pointer-events: none; z-index: 10;">
+            <span style="font-family: 'Caveat', 'Comic Sans MS', cursive; font-size: 2rem; color: #3b82f6;rotate: -25deg; font-style: italic;position: absolute; bottom: -85px; font-weight: 500; letter-spacing: 1px;">Hover Me</span>
+            <img id="arrow-img" src="/arr2.png" alt="Arrow" style="width:120px;filter:drop-shadow(0 2px 8px #000a);position: absolute; bottom: -120px;left: 80px;" />
           </div>
         </div>
     </div>
