--- a/public/resume-animation/index.html
+++ b/public/resume-animation/index.html
@@ -64,7 +64,7 @@
 <body>
     <div class="d-86-section-home">
         <div class="browser-demo"><a data-w-id="fa58b193-110e-bf95-404a-0fea97663a2d"
-            href="https://drive.google.com/file/d/1rIq6_RaPXXciRZ3OMenL9TFasoeVjE3Z/view?usp=drive_link"
+            href="https://drive.google.com/file/d/1papkMi0-UQW0MrHyeR0tRWV2TmI6rU2X/view?usp=sharing"
             target="_blank" class="d-86-3d-wrapper w-inline-block">
             <div data-w-id="ec1b564e-05f1-211b-f78b-1f6163085e2f" class="d-86-blocks-wrapper">
                 <div id="w-node-_0f4ad593-19bc-1e8b-b085-4420cb01d98c-a218b6e4" class="d-86-block"></div>
