--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HK-Build</title>
+    <title>HK</title>
+    <link rel="icon" href="/public/logo.png" type="image/x-icon" />
     <meta name="description" content="My Portfolio" />
     <meta name="Harsh" content="Resume" />
     <meta property="" content="/lion.png" />
